[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/entity/Game_objects/Obj_Conveyor_Spawner.gd" type="Script" id=1]

[node name="Obj_Conveyor_Spawner" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
autostart = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
